2009-03-07 Denton Woods <doomwiz@users.sf.net>
	* Updated version numbers to 1.7.8 project-wide.
	* DevIL_manual.texi: Added several file formats to the appendix.
	* il_io.c: Updated Doxygen comments for loading/saving functions.
	* libraries.txt: Updated with new libraries.
	* il_io.c (ilTypeFromExt): Changed return value of FITS files to IL_FITS.
		Added DICOM, FTX, Rot and Texture checks.
	* il_states.c/.h: Updated with newer file formats.
	* il_blp.c:649: Fixed ilNewImageFull call to use color index.
			   659: Fixed memcpy from base image to new mipmap.
	* il_dcx.c, il_exr.cpp and many more: Checks return value of ilFixImage now.
	* il_iff.c:271: Got rid of ilConvertImage call.

2009-03-06 Denton Woods <doomwiz@users.sf.net>
	* Updated VC8 projects to use il_mp3.c.
	* il.h: Added description to IL_WDP.

2009-03-05 Denton Woods <doomwiz@users.sf.net>
	* il_mp3.c: Added this file.
	* il_io.c: Added loading calls for .mp3 files.
	* il_internal.h: Added .mp3 loading declarations.
	* Makefile.am: Added il_mp3.c to source line.
	* il.h: Added IL_MP3 define.

2009-03-04 Denton Woods <doomwiz@users.sf.net>
	* il_utx.cpp: Started cleanup of file using C++ constructs.
	* Updated VC8 projects to use il_utx.cpp.

2009-03-03 Denton Woods <doomwiz@users.sf.net>
	* ilu_error-french.h: Added French translation of errors.
	* ilu.h: Added ILU_FRENCH define.
	* Changed il_utx.c to il_utx.cpp.

2009-03-02 Denton Woods <doomwiz@users.sf.net>
	* il_utx.c: Added DXT1 loading in UTX files.
	* il_utx.h: Added this file.
	* lib/Makefile.am: Added il_utx.h to include line.
	* il_utx.c: Fixed loading of larger images.
	* windows_example.rc: Fixed accelerator for menu.

2009-03-01 Denton Woods <doomwiz@users.sf.net>
	* il_utx.c: Added this file.
	* lib/Makefile.am: Added il_utx.c to source line.
	* il_internal.h: Added .utx loading declarations.
	* il_io.c: Added loading calls for .utx files.
	
2009-02-28 Denton Woods <doomwiz@users.sf.net>